--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -1453,7 +1453,7 @@ reconstruction. In this thesis, the method as described
 in~\cite{AlipourTehrani:2133128} is used for the data and simulations
 reconstruction and summarised in the following. The $\eta$-correction
 method calculates the distance with which the hit position moves from
-the geometric centre of two pixels in a cluster. Thi shift is
+the geometric centre of two pixels in a cluster. This shift is
 calculated as:
 
 \begin{equation}
