--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -639,7 +639,7 @@ author = "F. Krummenacher",
 @misc{MedipixCapa,
   author = "Llopart Cudie, Xavier",
   year = "2016",
-  howpublished = "Medipix group private communication"
+  howpublished = "Medipix Collaboration private communication"
 }
 
 
