--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -91,6 +91,7 @@ threshold or the bias voltages are scanned.
 
 %% --------------------------------------------- %%
 \section{Calibrated test beam data}
+\label{sec:calibrated_test_beam_data}
 
 The test pulse calibration as described in
 \cref{sec:EnergyCalibration} is applied to the test beam data in order
