--- a/include/appendix_Calibration.tex
+++ b/include/appendix_Calibration.tex
@@ -3,7 +3,7 @@
 \label{sec:appendixFE_electronics}
 %------------------------------------------------------------------------------
 
-The threshold DAC can be translated into an effective energy as
+The threshold DAC value can be translated into an effective energy as
 described in
 \cref{ch:FE_electronics}. \cref{fig:Timepix3_THL_Calibration} shows
 the calibration for the assemblies listed in
